--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -1,2 +1,24 @@
-<div ng-include src="'views/loginform.html'">
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Please sign in</h3>
+    </div>
+      <div class="panel-body">
+        <form accept-charset="UTF-8" role="form" ng-submit="authenticate()">
+              <fieldset>
+            <div class="form-group input-group" ng-class="{'has-error': hasError('username')}">
+              <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+              <input class="form-control" placeholder="Username" name="username" ng-model="username" type="text">
+          </div>
+          <div class="form-group input-group" ng-class="{'has-error': hasError('password')}">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+            <input class="form-control" placeholder="Password" name="password" ng-model="password" type="password" value="">
+          </div>
+          <button class="btn btn-lg btn-success btn-block">Login</button>
+        </fieldset>
+          </form>
+      </div>
+    </div>
+  </div>
 </div>
