Committed half-implemented state
Implementation to be reverted, and only the views will be made in advance

--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -6,5 +6,5 @@
   <p class="lead">
     {{tagLine()}}
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!</a></p>
+  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!</a></p>
 </div>
