--- a/client/app/views/account.html
+++ b/client/app/views/account.html
@@ -1,1 +1,111 @@
-<div ng-include src="'views/userform.html'"></div>
+<form role="form" name="userForm" ng-submit="register()">
+
+  <fieldset>
+
+    <legend>General Info</legend>
+
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="form-group">
+          <input ng-readonly="true" type="text" name="name" ng-value="user.name" class="form-control" placeholder="Name">
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="form-group">
+          <input ng-readonly="true" type="text" name="username" ng-value="user.username" class="form-control" placeholder="Username">
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="form-group">
+          <!-- Input type can't be date : not enough cohesion between browser behaviors -->
+          <input type="text" ng-required="isRequired('birthDate')" ng-readonly="true" class="form-control" ng-value="user.birthDate">
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="form-group">
+          <input type="tel" ng-required="true" name="telephone" ng-model="user.telephone" class="form-control" placeholder="Telephone Number">
+        </div>
+      </div>
+    </div>
+  </fieldset>
+
+  <fieldset ng-hide="!editForm">
+    <legend>Change Password</legend>
+
+    <div class="row">
+      <div class="col-xs-6">
+        <div class="form-group">
+          <input type="password" type="newPassword" name="password" ng-model="user.newPassword" class="form-control" placeholder="[Unchanged]">
+        </div>
+      </div>
+      <div class="col-xs-6">
+        <div class="form-group">
+          <input type="password" name="password_confirmation" ng-model="user.newPasswordConfirmation" password-verify="user.newPassword" class="form-control" placeholder="Confirm Password">
+        </div>
+      </div>
+    </div>
+  </fieldset>
+
+  <fieldset>
+    <legend>Address</legend>
+
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="form-group">
+          <select ng-model="user.address" class="form-control" ng-options="fullAddress(a) for a in addresses" name="currentAddress"></select>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div ng-class="{'col-xs-12': !editForm, 'col-xs-9': editForm}">
+        <div class="form-group">
+          <input ng-required="isRequired('address.address')" ng-disabled="isDisabled('address.address')" class="form-control" type="text" name="address" placeholder="Address line" ng-model="user.address.address">
+        </div>
+      </div>
+      <div class="col-xs-3" ng-hide="!editForm">
+        <div class="checkbox">
+          <input type="checkbox" ng-model="user.address.isDefault"> Default Address
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="form-group">
+          <input ng-required="isRequired('address.city')" ng-disabled="isDisabled('address.city')" class="form-control" type="text" name="city" placeholder="City" ng-model="user.address.city">
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="form-group">
+          <input ng-required="isRequired('address.province')" ng-disabled="isDisabled('address.province')" class="form-control" type="text" name="province" placeholder="Province" ng-model="user.address.province">
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="form-group">
+          <input ng-required="isRequired('address.postalCode')" ng-disabled="isDisabled('address.postalCode')" class="form-control" type="text" name="postal_code" placeholder="Postal Code" ng-model="user.address.postalCode">
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="form-group">
+          <select ng-require="isRequired('address.country')" ng-disabled="isDisabled('address.country')" ng-model="user.address.country" class="form-control" name="country">
+            <option value="">-- Select a Country --</option>
+            <option value="CA">Canada</option>
+          </select>
+        </div>
+      </div>
+    </div>
+
+  </fieldset>
+  <button type="submit" ng-disabled="!userForm.$valid" tooltip="{{submitTooltip()}}" class="btn btn-info btn-block">Save</button>
+
+</form>
