--- a/client/app/views/clientorder.html
+++ b/client/app/views/clientorder.html
@@ -1,4 +1,4 @@
-<div ng-init="currentStep = 1" class="container">
+<div ng-init="currentStep = 1" class="">
   <div class="row">
         <div class="col-xs-12">
             <ul class="nav nav-pills nav-justified thumbnail">
