--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -14,6 +14,21 @@ $activeColor: #428bca;
   transition-delay: $delay;
 }
 
+[growl-notifications] {
+  position: absolute;
+  right: 5%;
+  z-index: 1;
+  &.growl-animate{
+    li.ng-enter {
+      opacity:0;
+      @include animation(fadeInDown 1s);
+    }
+    li.ng-leave{
+      @include animation(fadeOut 1s);
+    }
+  }
+}
+
 .underlined {
   border-bottom: 1px solid #ddd;
 }
