--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -5,15 +5,15 @@
         <h3 class="panel-title">Please sign in</h3>
     </div>
       <div class="panel-body">
-        <form accept-charset="UTF-8" role="form" ng-submit="authenticate()">
+        <form name="loginForm" accept-charset="UTF-8" role="form" ng-submit="authenticate()">
               <fieldset>
-            <div class="form-group input-group" ng-class="{'has-error': hasError('username')}">
+            <div class="form-group input-group" ng-class="{'has-error': hasError('email')}">
               <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-              <input class="form-control" placeholder="Username" name="username" ng-model="username" type="text">
+              <input class="form-control" placeholder="Username" ng-model="login.email" required name="email" type="text">
           </div>
           <div class="form-group input-group" ng-class="{'has-error': hasError('password')}">
             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-            <input class="form-control" placeholder="Password" name="password" ng-model="password" type="password" value="">
+            <input class="form-control" placeholder="Password" ng-model="login.password" required name="password" type="password">
           </div>
           <button class="btn btn-lg btn-success btn-block">Login</button>
         </fieldset>
