--- a/client/app/views/restaurateursList.html
+++ b/client/app/views/restaurateursList.html
@@ -1,9 +1,9 @@
 <div class="list-group">
-  <a ng-repeat="r in [1,2,3]" href="#/restaurateurs/1" class="list-group-item row">
+  <a ng-repeat="r in restaurateurs" ng-href="#/restaurateurs/{{r.id}}" class="list-group-item row">
     <div class="col-md-10">
-      <h4 class="list-group-item-heading">Restaumann Smith <small>restaumann</small></h4>
+      <h4 class="list-group-item-heading">{{r.name}} <small>{{r.email}}</small></h4>
       <p class="list-group-item-text">
-        RestoPlus, Restostop, Restomax
+        {{restaurantList(r)}}
       </p>
     </div>
     <span class="glyphicon glyphicon-chevron-right pull-right" style="margin-top:1em"></span>
