Added missing Controller changes, added New button

--- a/client/app/views/restaurantlist.html
+++ b/client/app/views/restaurantlist.html
@@ -11,4 +11,12 @@
     </div>
     <span class="glyphicon glyphicon-chevron-right pull-right" style="margin-top:1em"></span>
   </a>
+  <a ng-href="#/restaurants/new" class="list-group-item list-group-item-info row">
+    <div class="col-md-10 media">
+      <h4 class="list-group-item-heading">Add new restaurant</h4>
+      <p class="list-group-item-text">
+      </p>
+    </div>
+    <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+  </a>
 </div>
