--- a/client/app/views/restaurateursList.html
+++ b/client/app/views/restaurateursList.html
@@ -8,4 +8,13 @@
     </div>
     <span class="glyphicon glyphicon-chevron-right pull-right" style="margin-top:1em"></span>
   </a>
+
+  <a ng-href="#/restaurateurs/new" class="list-group-item list-group-item-info row">
+    <div class="col-md-10 media">
+      <h4 class="list-group-item-heading">Add new Restaurateur</h4>
+      <p class="list-group-item-text">
+      </p>
+    </div>
+    <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+  </a>
 </div>
