--- a/client/app/views/clientorder.html
+++ b/client/app/views/clientorder.html
@@ -91,6 +91,10 @@
       </div>
 
     </li>
+    <li class="list-group-item list-group-item-info row">
+      <h3 class="list-group-item-heading">Delivery Date:</h3>
+      <input class="form-control" ng-model="deliveryDate" datepicker-popup="yyyy-MM-dd" datepicker-options="{'show-weeks': false}" show-button-bar="false" placeholder="YYYY-MM-DD">
+    </li>
   </ul>
   <div class="well col-md-6 col-md-offset-1 col-sm-12">
     <p><strong>{{currentClient.name}}</strong></p>
@@ -121,6 +125,6 @@
         </tr>
       </tfoot>
     </table>
-    <button type="button" class="btn btn-success pull-right" ng-click="confirmOrder()">Confirm Order</button>
+    <button type="button" class="btn btn-success pull-right" ng-disabled="!stepReady(5)" ng-click="confirmOrder()">Confirm Order</button>
   </div>
 </div>
