--- a/client/app/views/orders.html
+++ b/client/app/views/orders.html
@@ -1,18 +1,18 @@
 <div class="row">
   <div class="orders col-md-7 col-sm-12">
-    <div ng-repeat="re in [1,2]" class="restaurant-orders">
-      <h2 class="row underlined">Restoplus</h2>
+    <div ng-repeat="resto in restaurantOrders" class="restaurant-orders">
+      <h2 class="row underlined">{{resto.name}}</h2>
       <ul class="list-group">
-        <li ng-repeat="item in [1,2,3]" class="row list-group-item" ng-class="{'list-group-item-success': item == 2}" ng-click="selectedModel = $index">
+        <li ng-repeat="order in resto.commandes" class="row list-group-item" ng-class="['list-group-item-' + statusClass(order.status)]" ng-click="selectOrder(order)">
             <h3 class="list-group-item-heading">
-              #{{item}} <small><span class="label label-default">17-03-14 13:50</span> <span class="label label-default">14.85$</span> <span class="label label-success" ng-show="item == 2">Ready</span></small>
+              #{{order.id}} <small><span class="label label-default">{{date(order.delivery_date)}}</span> <span class="label label-default">{{currency(total(order.subtotal))}}</span> <span class="label" ng-class="statusLabelClass(order.status)">{{capitalize(order.status)}}</span></small>
             </h3>
             <div class="list-group-item-text">
-              <p><em>123 Fake Street, Mi, Ca</em></p>
-              <p><em>(233) 345-2356</em></p>
+              <p><em>{{order.user.name}}</em></p>
+              <p><em>{{address(order.address)}}</em></p>
+              <p><em>{{order.user.telephone}}</em></p>
               <ul>
-                <li>2 Foodghetti</li>
-                <li>3 Pizzaburgers</li>
+                <li ng-repeat="line in order.repas">{{line.quantity}} <strong>{{line.repas.nom}}</strong></li>
               </ul>
             </div>
 
@@ -22,40 +22,43 @@
   </div>
 
   <div class="well col-md-4 col-md-offset-1 col-sm-12">
-    <div class="receipt-header row">
-      <p class="text-left col-md-7"><b>Ronaldo Cliento</b></p>
-      <p class="text-right col-md-5"><em>17-03-14<br>#e4b6dd5</em></p>
-      <p class="text-right col-md-12">(233) 345-2356<br><em>123, Fake Street, Mi, Ca</em></p>
-    </div>
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th class="col-md-8">Product</th>
-          <th class="col-md-2 text-center">Qt.</th>
-          <th class="col-md-2 text-center">Total</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr ng-repeat="rows in [1,2,3,4]">
-          <td class="col-md-8"><em>Foodghetti</em></td>
-          <td class="col-md-2 text-center">2</td>
-          <td class="col-md-2 text-center">14$</td>
-        </tr>
-      </tbody>
-      <tfoot>
-        <tr>
-          <td colspan="2" class="text-right"><strong>Subtotal:<br>Taxes:</strong></td>
-          <td class="text-center"><strong>56$<br>4$</strong></td>
-        </tr>
-        <tr>
-          <td colspan="3" class="text-right"><h4>Total: <span class="text-danger">60$</span></h4></td>
-        </tr>
-      </tfoot>
-    </table>
-    <div class="controls row">
-      <button class="btn btn-primary col-md-12">Commencer Préparation</button>
-      <button class="btn btn-success col-md-12">Finir Préparation</button>
-      <button class="btn btn-danger col-md-12">Annuler Préparation</button>
+    <h4 ng-hide="orderSelected()"><em class="text-muted">Please select an order</em></h4>
+    <div class="order-receipt" ng-hide="!orderSelected()">
+      <div class="receipt-header row">
+        <p class="text-left col-md-7"><b>{{currentOrder.user.name}}</b></p>
+        <p class="text-right col-md-5"><em>{{date(currentOrder.delivery_date)}}<br>#{{currentOrder.id}}</em></p>
+        <p class="text-right col-md-12">{{currentOrder.user.telephone}}<br><em>{{address(currentOrder.address)}}</em></p>
+      </div>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th class="col-md-6">Product</th>
+            <th class="col-md-2 text-center">Qt.</th>
+            <th class="col-md-4 text-center">Total</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="line in currentOrder.repas">
+            <td class="col-md-6"><em>{{line.repas.nom}}</em></td>
+            <td class="col-md-2 text-center">{{line.quantity}}</td>
+            <td class="col-md-4 text-center">{{currency(line.subtotal)}}</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td colspan="" class="text-right"><strong>Subtotal:<br>Taxes:</strong></td>
+            <td colspan="2" class="text-right"><strong>{{currency(subtotal(currentOrder))}}<br>{{currency(taxes(subtotal(currentOrder)))}}</strong></td>
+          </tr>
+          <tr>
+            <td colspan="3" class="text-right"><h4>Total: <span class="text-danger">{{currency(finalTotal(currentOrder))}}</span></h4></td>
+          </tr>
+        </tfoot>
+      </table>
+      <div class="controls row">
+        <button class="btn btn-primary col-md-12">Commencer Préparation</button>
+        <button class="btn btn-success col-md-12">Finir Préparation</button>
+        <button class="btn btn-danger col-md-12">Annuler Préparation</button>
+      </div>
     </div>
   </div>
 </div>
