--- a/client/app/views/account.html
+++ b/client/app/views/account.html
@@ -1,4 +1,4 @@
-<form role="form" name="userForm" ng-submit="register()">
+<form role="form" name="userForm" ng-submit="saveChanges()">
 
   <fieldset>
 
@@ -7,7 +7,7 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="form-group">
-          <input ng-readonly="true" type="text" name="name" ng-value="user.name" class="form-control" placeholder="Name">
+          <input ng-readonly="true" type="text" name="name" ng-value="currentClient.user.name" class="form-control" placeholder="Name">
         </div>
       </div>
     </div>
@@ -15,13 +15,13 @@
     <div class="row">
       <div class="col-sm-6">
         <div class="form-group">
-          <input ng-readonly="true" type="text" name="username" ng-value="user.username" class="form-control" placeholder="Username">
+          <input ng-readonly="true" type="text" name="email" ng-value="currentClient.email" class="form-control" placeholder="Email">
         </div>
       </div>
       <div class="col-sm-6">
         <div class="form-group">
           <!-- Input type can't be date : not enough cohesion between browser behaviors -->
-          <input type="text" ng-required="isRequired('birthDate')" ng-readonly="true" class="form-control" ng-value="user.birthDate">
+          <input type="text" ng-required="isRequired('birthDate')" ng-readonly="true" class="form-control" ng-value="currentClient.user.birth_date">
         </div>
       </div>
     </div>
@@ -29,7 +29,7 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="form-group">
-          <input type="tel" ng-required="true" name="telephone" ng-model="user.telephone" class="form-control" placeholder="Telephone Number">
+          <input type="tel" ng-required="true" name="telephone" ng-model="currentClient.user.telephone" class="form-control" placeholder="Telephone Number">
         </div>
       </div>
     </div>
@@ -41,12 +41,12 @@
     <div class="row">
       <div class="col-xs-6">
         <div class="form-group">
-          <input type="password" type="newPassword" name="password" ng-model="user.newPassword" class="form-control" placeholder="[Unchanged]">
+          <input type="password" type="newPassword" name="password" ng-model="currentClient.password" class="form-control" placeholder="[Unchanged]">
         </div>
       </div>
       <div class="col-xs-6">
         <div class="form-group">
-          <input type="password" name="password_confirmation" ng-model="user.newPasswordConfirmation" password-verify="user.newPassword" class="form-control" placeholder="Confirm Password">
+          <input type="password" name="password_confirmation" ng-model="currentClient.password_confirmation" password-verify="currentClient.password" class="form-control" placeholder="Confirm Password">
         </div>
       </div>
     </div>
@@ -58,20 +58,22 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="form-group">
-          <select ng-model="user.address" class="form-control" ng-options="fullAddress(a) for a in addresses" name="currentAddress"></select>
+          <select ng-model="currentAddress" class="form-control" ng-options="a as address(a) for a in currentClient.user.addresses" name="currentAddress">
+            <option value="">-- Select an address --</option>
+          </select>
         </div>
       </div>
     </div>
 
     <div class="row">
-      <div ng-class="{'col-xs-12': !editForm, 'col-xs-9': editForm}">
+      <div class="col-xs-9">
         <div class="form-group">
-          <input ng-required="isRequired('address.address')" ng-disabled="isDisabled('address.address')" class="form-control" type="text" name="address" placeholder="Address line" ng-model="user.address.address">
+          <input ng-required="isRequired('address.address')" ng-disabled="isDisabled('address.address')" class="form-control" type="text" name="address" placeholder="Address line" ng-model="currentAddress.street_address">
         </div>
       </div>
-      <div class="col-xs-3" ng-hide="!editForm">
+      <div class="col-xs-3">
         <div class="checkbox">
-          <input type="checkbox" ng-model="user.address.isDefault"> Default Address
+          <input type="checkbox" ng-model="currentAddress.is_default"> Default Address
         </div>
       </div>
     </div>
@@ -79,12 +81,12 @@
     <div class="row">
       <div class="col-sm-6">
         <div class="form-group">
-          <input ng-required="isRequired('address.city')" ng-disabled="isDisabled('address.city')" class="form-control" type="text" name="city" placeholder="City" ng-model="user.address.city">
+          <input ng-required="isRequired('address.city')" ng-disabled="isDisabled('address.city')" class="form-control" type="text" name="city" placeholder="City" ng-model="currentAddress.city">
         </div>
       </div>
       <div class="col-sm-6">
         <div class="form-group">
-          <input ng-required="isRequired('address.province')" ng-disabled="isDisabled('address.province')" class="form-control" type="text" name="province" placeholder="Province" ng-model="user.address.province">
+          <input ng-required="isRequired('address.province')" ng-disabled="isDisabled('address.province')" class="form-control" type="text" name="province" placeholder="Province" ng-model="currentAddress.province">
         </div>
       </div>
     </div>
@@ -92,12 +94,12 @@
     <div class="row">
       <div class="col-sm-6">
         <div class="form-group">
-          <input ng-required="isRequired('address.postalCode')" ng-disabled="isDisabled('address.postalCode')" class="form-control" type="text" name="postal_code" placeholder="Postal Code" ng-model="user.address.postalCode">
+          <input ng-required="isRequired('address.postalCode')" ng-disabled="isDisabled('address.postalCode')" class="form-control" type="text" name="postal_code" placeholder="Postal Code" ng-model="currentAddress.code_postal">
         </div>
       </div>
       <div class="col-sm-6">
         <div class="form-group">
-          <select ng-require="isRequired('address.country')" ng-disabled="isDisabled('address.country')" ng-model="user.address.country" class="form-control" name="country">
+          <select ng-require="isRequired('address.country')" ng-disabled="isDisabled('address.country')" ng-model="currentAddress.country" class="form-control" name="country">
             <option value="">-- Select a Country --</option>
             <option value="CA">Canada</option>
           </select>
