--- a/client/app/views/account.html
+++ b/client/app/views/account.html
@@ -59,7 +59,7 @@
       <div class="col-xs-12">
         <div class="form-group">
           <select ng-model="currentAddress" class="form-control" ng-options="a as address(a) for a in currentClient.user.addresses" name="currentAddress">
-            <option value="">-- Select an address --</option>
+            <option value="">-- New address --</option>
           </select>
         </div>
       </div>
@@ -68,12 +68,12 @@
     <div class="row">
       <div class="col-xs-9">
         <div class="form-group">
-          <input ng-required="isRequired('address.address')" ng-disabled="isDisabled('address.address')" class="form-control" type="text" name="address" placeholder="Address line" ng-model="currentAddress.street_address">
+          <input ng-required="isRequired('address.address')" class="form-control" type="text" name="address" placeholder="Address line" ng-model="currentAddress.street_address">
         </div>
       </div>
       <div class="col-xs-3">
         <div class="checkbox">
-          <input type="checkbox" ng-model="currentAddress.is_default"> Default Address
+          <label><input type="checkbox" ng-model="currentAddress.is_default"> Default Address</label>
         </div>
       </div>
     </div>
@@ -106,6 +106,8 @@
         </div>
       </div>
     </div>
+
+        <button type="button" ng-click="addAddress(currentAddress)" class="btn btn-primary btn-block" ng-show="newAddress()">Add address</button><br>
 
   </fieldset>
   <button type="submit" ng-disabled="!userForm.$valid" tooltip="{{submitTooltip()}}" class="btn btn-info btn-block">Save</button>
